--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
   },
   "scripts": {
     "seed": "node seeder.js",
-    "react-dev": "webpack -d --watch"
+    "react-dev": "webpack -d --watch",
+    "server-dev": "nodemon server/index.js"
+
   },
   "dependencies": {
     "axios": "^0.19.2",
     "express": "^4.17.1",
     "faker": "^4.1.0",
-    "mongoose": "^5.9.27"
-
+    "mongoose": "^5.9.27",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
@@ -27,4 +30,5 @@
     "babel-preset-env": "^7.11.0",
     "webpack": "^4.44.1"
   }
+
 }
