--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "seed": "node seeder.js",
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon server/index.js"
-
   },
   "dependencies": {
     "axios": "^0.19.2",
@@ -22,13 +21,16 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
-    "@babel/core": "^7.11.1",
-    "@babel/preset-react": "^7.10.4",
     "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.11.1",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
-    "babel-preset-env": "^7.11.0",
-    "webpack": "^4.44.1"
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "jest": "^26.2.2",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
   }
-
 }
