--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "faker": "^4.1.0",
     "mongoose": "^5.9.27",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.5",
